--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "Frac(15, -3)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,117 +107,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hcf(a,b): # highest common defactor\n",
+    "    if a == 0:\n",
+    "        return b\n",
+    "    else:\n",
+    "        return hcf(b % a, a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hcf(15,21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Frac:\n",
+    "\n",
+    "    def __init__(self, nomi, denomi):\n",
+    "        gcd = hcf(nomi, denomi) #Greatest common defactor # Highest common defactor\n",
+    "        self.top = nomi/gcd\n",
+    "        self.bottom = denomi/gcd\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        if self.bottom == 1:\n",
+    "            return str(self.top)\n",
+    "        elif self.top > self.bottom:\n",
+    "            return str(self.top//self.bottom) + str(Frac(self.top % self.bottom, self.bottom))\n",
+    "        else:\n",
+    "            return str(self.top) + \"/\" + str(self.bottom)\n",
+    "    \n",
+    "    \n",
+    "    def double(self):\n",
+    "        return Frac(2**self.top, self.bottom)\n",
+    "\n",
+    "    def multiply(self, n):\n",
+    "        return Frac(n*self.top, self.bottom)\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        newtop = self.top * other.bottom + other.top * self.bottom\n",
+    "        newbottom = self.bottom * other.bottom\n",
+    "        return Frac(newtop, newbottom)\n",
+    "    def __sub__(self):\n",
+    "        pass\n",
+    "\n",
+    "    def __mul__(self, other):\n",
+    "        newtop = self.top * other.top\n",
+    "        newbottom = self.bottom * other.bottom\n",
+    "        return Frac(newtop, newbottom)\n",
+    "\n",
+    "    def __truediv__(self, other):\n",
+    "        pass\n",
+    "\n",
+    "    def __lt__(self,other):\n",
+    "        return(self.top*other.bottom < other.top*self.bottom)\n",
+    "    \n",
+    "    def __gt__(self, other):\n",
+    "        return(self.top*other.bottom > other.top*self.bottom)\n",
+    "\n",
+    "    def __eq__(self,other):\n",
+    "        return(self.top*other.bottom == other.top*self.bottom)\n",
+    "\n",
+    "    def __le__(self,other):\n",
+    "        return(self>other or self==other)\n",
+    "\n",
+    "    def __ge__(self,other):\n",
+    "        return(self<other or self == other)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class Frac in module __main__:\n",
-      "\n",
-      "class Frac(builtins.object)\n",
-      " |  Frac(top, bottom) -> None\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, top, bottom) -> None\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __repr__(self)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  mixed(self)\n",
-      " |      # Represent the fraction in mixed terms\n",
-      " |  \n",
-      " |  simplify(self, value=None)\n",
-      " |      Simplifies fractions\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
+      "1.0/2.0\n",
+      "1.0\n",
+      "1.01.0/2.0\n",
+      "1.01.0/2.0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Frac' has no attribute 'bottom'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [91], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39mmultiply(\u001b[38;5;241m3\u001b[39m))\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(a\u001b[38;5;241m.\u001b[39mmultiply(\u001b[38;5;241m3\u001b[39m))\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mFrac\u001b[49m)(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m7\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(Frac(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39mFrac(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m7\u001b[39m))\n",
+      "Cell \u001b[1;32mIn [81], line 24\u001b[0m, in \u001b[0;36mFrac.__add__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__add__\u001b[39m(\u001b[38;5;28mself\u001b[39m, other):\n\u001b[1;32m---> 24\u001b[0m     newtop \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop \u001b[38;5;241m*\u001b[39m \u001b[43mother\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbottom\u001b[49m \u001b[38;5;241m+\u001b[39m other\u001b[38;5;241m.\u001b[39mtop \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbottom\n\u001b[0;32m     25\u001b[0m     newbottom \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbottom \u001b[38;5;241m*\u001b[39m other\u001b[38;5;241m.\u001b[39mbottom\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Frac(newtop, newbottom)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: type object 'Frac' has no attribute 'bottom'"
      ]
     }
    ],
    "source": [
-    "help(Frac)"
+    "\"\"\" - 1/2 + 1/3 = 5/6\n",
+    "- 1/2 - 1/3 = 1/6\n",
+    "- 3*1/2 = 3/2\n",
+    "- 1/2 * 3 = 3/2\n",
+    "- 1/4 + 2 = 9/4\n",
+    "- 1/4 / 1/2 = 1/2 \"\"\"\n",
+    "\n",
+    "a = Frac(1,2)\n",
+    "print(a)\n",
+    "print(a.double())\n",
+    "print(a.multiply(3))\n",
+    "print(a.multiply(3))\n",
+    "print(a+Frac)(2,7)\n",
+    "print(Frac(1,2)*Frac(3,7))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.01.0/4.0\n"
+     ]
+    }
+   ],
    "source": [
-    "    a = num // dem\n",
-    "b = num % dem\n",
-    "print 'The mixed number is {} and {}/{}'.format(a, b, dem)"
+    "print(Frac(3,4)+Frac(1,2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "from __future__ import division\n",
-    "import math\n",
+    "\"\"\"\n",
+    "- 2/4 == 1/2 --> True\n",
+    "- 3/4 += 2 = 11/4 \"\"\"\n",
     "\n",
     "\n",
-    "class Frac:\n",
-    "    \n",
+    "print(Frac(1,4) <= Frac (1,2))\n",
+    "print(Frac(4,5) >= Frac(4,7))\n",
+    "print(Frac(2,4) == Frac(1,2))\n",
     "\n",
-    "\n",
-    "class Fraction:\n",
-    "\n",
-    "\n",
-    "    def __init__(self, nominator, denominator): -> None\n",
-    "        self.nominator = nominator\n",
-    "        self.nomimator = denominator\n",
-    "\n",
-    "\n",
-    "    # Simplifies to most simple form unless value is given\n",
-    "    def simplify(self, value = None):\n",
-    "        if nominator % 2 == 0 and denominator % 2 == 0 True:\n",
-    "            \n",
-    "\n",
-    "    def __str__(self) # Represent the fraction in a neat way for printing\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def mixed(self) # Represent the fraction in mixed terms\n",
-    "\n",
-    "\n",
-    "    __eg__(self, other)  #Checks equality by overloading == \n",
-    "\n",
-    "\n",
-    "    # Make handle errors and validatons\n",
-    "\n",
-    "\n",
-    "\n",
-    "        # def __init__(self, nominator, denominator):\n",
-    "    #     if(not isinstance(numerator, int)):\n",
-    "    #         raise TypeError(\"The numerator of a fraction must be an integer\")\n",
-    "    #     if(not isinstance(denominator, int)):\n",
-    "    #         raise TypeError(\"The number of a fraction must be an integer\")\n",
-    "\n",
-    "    #     if(denominator == 0):\n",
-    "    #         raise ZeroDivisionError(\"The denominator of a fraction can't be zero\")\n",
-    "        \n",
-    "    #     if(nominator == 0):\n",
-    "    #         this._nominator = 0\n",
-    "    #         this._denominator = 1\n",
-    "    #     else:\n",
-    "    #         if(nominator < 0 and denominator >=0) or (nominator >= 0 and denominator <0 ):\n",
-    "    #             sign -1:\n",
-    "    #             else:\n",
-    "    #                 sign 1\n",
     "\n"
    ]
   }
