--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -27,7 +27,8 @@
     "- 1/4 + 2 = 9/4\n",
     "- 1/4 / 1/2 = 1/2\n",
     "- 2/4 == 1/2 --> True\n",
-    "- 3/4 += 2 = 11/4"
+    "- 3/4 += 2 = 11/4\n",
+    "\n"
    ]
   },
   {
@@ -54,6 +55,21 @@
     }
    ],
    "source": [
+    "\n",
+    "\"\"\" Operator\tDunder method\n",
+    "+\t__add__(self,other)\n",
+    "-\t__sub__(self,other)\n",
+    "*\t__mul__(self,other)\n",
+    "/\t__div__(self,other)\n",
+    "//\t__floordiv__(self,other)\n",
+    "%\t__mod__(self,other)\n",
+    "**\t__pow__(self,other)\n",
+    "<\t__lt__(self,other)\n",
+    "<=\t__le__(self,other)\n",
+    ">\t__gt__(self,other)\n",
+    ">=\t__ge__(self,other)\n",
+    "==\t__eq__(self,other) \"\"\"\n",
+    "\n",
     "\n",
     "from __future__ import division\n",
     "\n",
