--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -4,6 +4,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Uppgift 1\n",
+    "\n",
+    "Video assignment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (313046551.py, line 21)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [8], line 21\u001b[1;36m\u001b[0m\n\u001b[1;33m    if type(value) != str: #Om typ av valuen inte är en string\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class video():\n",
+    "\n",
+    "    def __init__(self, title: str, genre: str, rating: float):\n",
+    "        \"\"\"Init takes input and stores attributes from class\"\"\"\n",
+    "        self.title = title   #Eftersom vi har property skriver vi inte ._\n",
+    "        self.genre = genre\n",
+    "        self.rating = rating\n",
+    "\n",
+    "    # Getter setter for title\n",
+    "    @property  # Om du frågar klassen vad titeln här, så du hämtar titeln från klassen.\n",
+    "    def title(self):\n",
+    "        \"\"\"Getter for title\"\"\"\n",
+    "        return self._title\n",
+    "\n",
+    "    # TODO setter\n",
+    "    @title.setter\n",
+    "    def title(self, value: str):   #Value till title\n",
+    "    # datatype needs to be a string\n",
+    "    # value cannot be none\n",
+    "        if type(value) != str: #Om typ av valuen inte är en string\n",
+    "            raise TypeError(f\"Value must be a string, not {type(value)}\") \n",
+    "    #Value can't be none\n",
+    "        if value.strip() == \"\":  # Strip tar bort mellanslag innan och efter strängen\n",
+    "            raise ValueError(f\"You haven't written anything\")\n",
+    "\n",
+    "        value = value.capitalize()\n",
+    "        self._title = value\n",
+    "    \n",
+    "    # getter setter for genre\n",
+    "    @property  \n",
+    "    def genre(self):\n",
+    "        \"\"\"Getter for genre\"\"\"\n",
+    "        return self._genre\n",
+    "\n",
+    "\n",
+    "    @genre.setter\n",
+    "    def genre(self, value: str):\n",
+    "        genre_list = [\"action\", \"comedy\", \"drama\", \"fantasy\", \"horror\", \"mystery\", \"romance\", \"thriller\"]\n",
+    "        if value.lower() not in genre_list:\n",
+    "            raise ValueError(f\"{value} is not a valid genre\")\n",
+    "\n",
+    "        value = value.capitalize()\n",
+    "        self._genre = value\n",
+    "    \n",
+    "\n",
+    "    # getter setter for rating\n",
+    "        @property  \n",
+    "    def rating(self):\n",
+    "        \"\"\"Getter for rating\"\"\"\n",
+    "        return self._rating\n",
+    "\n",
+    "\n",
+    "    @rating.setter\n",
+    "    def rating(self, value: float):\n",
+    "        #must be a number\n",
+    "        if type(value) != float or type(value) =! int:\n",
+    "            raise TypeError(f\"Rating must be a number, not{type(value)}\")\n",
+    "        #Cannot be none\n",
+    "        #Cannot be a negative number\n",
+    "        #max size\n",
+    "        if not 0 < value < 10:\n",
+    "            raise ValueError(f\"Rating must be between 0-10, not{type(value)}\")\n",
+    "\n",
+    "        # round to 1 decimal\n",
+    "\n",
+    "        value = value.capitalize()\n",
+    "        self._rating = value\n",
+    "\n",
+    "\n",
+    "    #TODO error handling\n",
+    "    print(capitalize)\n",
+    "        return#something\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "#TODO def info_self()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# TODO: class TV_serie\n",
+    "# TODO: class Movie\n",
+    "# TODO: class Documentary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Fraction (**)\n",
     "Create a class called Frac to represent mathematical fractions. The class is instantiated with two instance variables: nominator and denominator. Objects instantiated from this class should have methods for addition, subtraction, multiplication, division using the operators +,-,*,/. Note that these implemented methods must be mathematically correct. Also implement the following methods:\n",
     "\n",
@@ -30,6 +148,11 @@
     "- 3/4 += 2 = 11/4\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -123,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,27 +254,28 @@
     "    if a == 0:\n",
     "        return b\n",
     "    else:\n",
-    "        return hcf(b % a, a)\n"
+    "        return hcf(b % a, a)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "1"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hcf(15,21)"
+    "hcf(2,1)"
    ]
   },
   {
