--- a/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
+++ b/Excercise/L12-OOP-Polymorphins-Excercises.ipynb
@@ -11,22 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (313046551.py, line 21)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [8], line 21\u001b[1;36m\u001b[0m\n\u001b[1;33m    if type(value) != str: #Om typ av valuen inte är en string\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
     "\n",
-    "class video():\n",
-    "\n",
+    "class Video():\n",
+    "    \"\"\"Super/Parent class for video, 2 strings and an int\"\"\"\n",
     "    def __init__(self, title: str, genre: str, rating: float):\n",
     "        \"\"\"Init takes input and stores attributes from class\"\"\"\n",
     "        self.title = title   #Eftersom vi har property skriver vi inte ._\n",
@@ -62,60 +54,217 @@
     "\n",
     "    @genre.setter\n",
     "    def genre(self, value: str):\n",
-    "        genre_list = [\"action\", \"comedy\", \"drama\", \"fantasy\", \"horror\", \"mystery\", \"romance\", \"thriller\"]\n",
+    "        genre_list = [\"action\", \"comedy\", \"drama\", \"fantasy\", \"horror\", \"mystery\", \"romance\", \"thriller\", \"cartoon\", \"romance\"]\n",
     "        if value.lower() not in genre_list:\n",
     "            raise ValueError(f\"{value} is not a valid genre\")\n",
     "\n",
     "        value = value.capitalize()\n",
     "        self._genre = value\n",
     "    \n",
-    "\n",
     "    # getter setter for rating\n",
-    "        @property  \n",
+    "    @property\n",
     "    def rating(self):\n",
     "        \"\"\"Getter for rating\"\"\"\n",
     "        return self._rating\n",
     "\n",
-    "\n",
     "    @rating.setter\n",
-    "    def rating(self, value: float):\n",
-    "        #must be a number\n",
-    "        if type(value) != float or type(value) =! int:\n",
-    "            raise TypeError(f\"Rating must be a number, not{type(value)}\")\n",
-    "        #Cannot be none\n",
-    "        #Cannot be a negative number\n",
-    "        #max size\n",
+    "    def rating(self, value: (int | float)):\n",
+    "        # must be number:\n",
+    "        if not isinstance(value, (int, float)):\n",
+    "            raise TypeError(f\"Rating must be a number, not {type(value)}\")\n",
+    "\n",
+    "        # cannot be none, negative, or over max size:\n",
     "        if not 0 < value < 10:\n",
-    "            raise ValueError(f\"Rating must be between 0-10, not{type(value)}\")\n",
+    "            raise ValueError(f\"Rating must be between 0-10, not {value}\")\n",
     "\n",
-    "        # round to 1 decimal\n",
-    "\n",
-    "        value = value.capitalize()\n",
-    "        self._rating = value\n",
+    "        # round to 1 decimal and set rating\n",
+    "        self._rating = round(value, 1)\n",
     "\n",
     "\n",
-    "    #TODO error handling\n",
-    "    print(capitalize)\n",
-    "        return#something\n",
+    "    def info(self) -> str:\n",
+    "        \"\"\"Return info about video class in string format\"\"\"\n",
+    "        if type(self) == Video:\n",
+    "            return f\"{self.genre} video title \\\"{self.title}\\\" with a rating of {self.rating}\"\n",
+    "        #TODO: return(f\"{type(self)}\") Documentary\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "\n",
-    "#TODO def info_self()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Video\"\n",
     "\n",
     "\n",
     "# TODO: class TV_serie\n",
+    "class Tv_serie(Video):\n",
+    "    \"\"\"This is the class for tv_series\"\"\"\n",
+    "    def __init__(self, title: str, genre: str, rating: float, episodes:int):  # Tips skriv in def __i sedan tabba in för att hämta ut från video\n",
+    "        super().__init__(title, genre, rating)\n",
+    "        self.episodes = episodes\n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "    def episodes(self):\n",
+    "        \"\"\"Getter for episodes\"\"\"\n",
+    "        return self._episodes\n",
+    "\n",
+    "    @episodes.setter\n",
+    "    def episodes(self, value: (int | float)):\n",
+    "        # must be number:\n",
+    "        if type(value) != int:\n",
+    "            raise TypeError(f\"episodes must be a number, not {type(value)}\")\n",
+    "\n",
+    "        # cannot be none, negative, or over max size:\n",
+    "        if not 0 < value:\n",
+    "            raise ValueError(f\"Episodes must be greater than 0, not {value}\")\n",
+    "\n",
+    "        #set episodes\n",
+    "        self._episodes = value\n",
+    "\n",
+    "\n",
+    "# Todo getter setter num_episodes\n",
+    "# Todo info(self)\n",
+    "    def info(self) -> str:\n",
+    "        return f\"{self.genre} Tv_series titled \\\"{self.title}\\\" with a rating of {self.rating}, with {self.episodes} episodes\"\n",
+    "\n",
     "# TODO: class Movie\n",
-    "# TODO: class Documentary"
+    "class Movie(Video):\n",
+    "    \"\"\"This is the class for Movie\"\"\"\n",
+    "    def __init__(self, title: str, genre: str, rating: float, Duration:int):  # Tips skriv in def __i sedan tabba in för att hämta ut från video\n",
+    "        super().__init__(title, genre, rating)\n",
+    "        self.Duration = Duration\n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "    def duration(self):\n",
+    "        \"\"\"Getter for duration\"\"\"\n",
+    "        return self._duration\n",
+    "\n",
+    "    @duration.setter\n",
+    "    def duration(self, value: float):\n",
+    "        # must be number:\n",
+    "        if type(value) != float:\n",
+    "            raise TypeError(f\"duration must be a number, not {type(value)}\")\n",
+    "\n",
+    "        # cannot be none, negative, or over max size:\n",
+    "        if not 0 < value:\n",
+    "            raise ValueError(f\"duration must be greater than 0, not {value}\")\n",
+    "\n",
+    "        #set duration\n",
+    "        self._duration = value\n",
+    "\n",
+    "# TODO: class Documentary\n",
+    "class Documentary(Video):\n",
+    "    \"\"\"This is the class for Documentary\"\"\"\n",
+    "    def __init__(self, title: str, genre: str, rating: float, duration:int):  # Tips skriv in def __i sedan tabba in för att hämta ut från video\n",
+    "        super().__init__(title, genre, rating)\n",
+    "        self.duration = duration\n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "    def duration(self):\n",
+    "        \"\"\"Getter for duration\"\"\"\n",
+    "        return self._duration\n",
+    "\n",
+    "    @duration.setter\n",
+    "    def duration(self, value: (int | float)):\n",
+    "        # must be number:\n",
+    "        if type(value) != int:\n",
+    "            raise TypeError(f\"duration must be a number, not {type(value)}\")\n",
+    "\n",
+    "        # cannot be none, negative, or over max size:\n",
+    "        if not 0 < value:\n",
+    "            raise ValueError(f\"duration must be greater than 0, not {value}\")\n",
+    "\n",
+    "        #set duration\n",
+    "        self._duration = value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cartoon Tv_series titled \"Pokemon\" with a rating of 4.5, with 550 episodes\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    Pokemon = Tv_serie(\"Pokemon\", \"Cartoon\", 4.5, 550)\n",
+    "    print(Pokemon.info())\n",
+    "except ValueError as err:\n",
+    "    print(err)\n",
+    "except TypeError as err:\n",
+    "    print(err)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duration must be a number, not <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    Titanic = Movie(\"Titanic\", \"Romance\", 4.7, 194)\n",
+    "    print(Titanic.info())\n",
+    "except ValueError as err:\n",
+    "    print(err)\n",
+    "except TypeError as err:\n",
+    "    print(err)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__init__() missing 1 required positional argument: 'duration'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    code = Documentary(\"The Code\", \"Math\", 4)\n",
+    "    print(code.info())\n",
+    "except ValueError as err:\n",
+    "    print(err)\n",
+    "except TypeError as err:\n",
+    "    print(err)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Titanic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [97], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m video \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mtuple\u001b[39m((Pokemon, \u001b[43mTitanic\u001b[49m, code)):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(video\u001b[38;5;241m.\u001b[39minfo())\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Titanic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for video in tuple((Pokemon, Titanic, code)):\n",
+    "    print(video.info())"
    ]
   },
   {
