--- a/Code-Along/L13-OOP-Inheritence-Composition.ipynb
+++ b/Code-Along/L13-OOP-Inheritence-Composition.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PersonAda says hi\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "\n",
@@ -38,13 +46,122 @@
     "    @name.setter\n",
     "    def name(self, value: str) -> None:\n",
     "        # bug in this regexp\n",
-    "        if re.search(r\"^[A-Ö][-a-öA-Ö]+(\\s[A-Ö][-a-öA-Ö]+)?$\", value.strip()) is None:  #Plus visar att det kan vara flera av dessa tecknen\n",
-    "            raise ValueError(f\"{value} is not a valid name\")\n",
+    "        if re.search(r\"^[A-ö]+(\\s[A-ö])?$\", value.strip()) is None:  #Plus visar att det kan vara flera av dessa tecknen\n",
+    "            raise ValueError(f\"{value.strip} is not a valid name\")\n",
+    "\n",
+    "        self._name = value\n",
+    "    \n",
+    "    def say_hi(self) -> None:\n",
+    "        print(f\"Person{self.name} says hi\")\n",
+    "\n",
+    "# This is the subclass(Superclass), DerivedClass(BaseClass)\n",
+    "class Student(Person):\n",
+    "    pass\n",
+    "\n",
+    "# Student1 uses __init__() from its parent class\n",
+    "student1 = Student(\"Ada\", 42)\n",
+    "\n",
+    "# Student1 uses say_hi() from its parent class\n",
+    "student1.say_hi()\n",
+    "\n",
+    "try:\n",
+    "    p = Person(\"Hej\", 52)\n",
+    "except ValueError as err:\n",
+    "    print(err)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Update classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'oldcoins'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [18], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01moldcoins\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OldCoinsStash\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mPerson\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name: \u001b[38;5;28mstr\u001b[39m, age: \u001b[38;5;28mint\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'oldcoins'"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "from oldcoins import OldCoinsStash\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self, name: str, age: int) -> None:\n",
+    "        self.age = age\n",
+    "        self.name = name\n",
+    "\n",
+    "    @property\n",
+    "    def age(self) -> int:\n",
+    "        return self._age\n",
+    "\n",
+    "    @age.setter\n",
+    "    def age(self, value: int) -> None:\n",
+    "        if not isinstance(value, int):\n",
+    "            raise TypeError(f\"Age must be int or float not {type(value).__name__}\")\n",
+    "        self._age = value\n",
+    "\n",
+    "    @property\n",
+    "    def name(self) -> str:\n",
+    "        return self._name\n",
+    "    \n",
+    "    @name.setter\n",
+    "    def name(self, value: str) -> None:\n",
+    "        # bug in this regexp \n",
+    "        if re.search(r\"^[A-ö]+(\\s[A-ö]+)?$\", value.strip()) is None:\n",
+    "            raise ValueError(f\"{value.strip()} is not a valid name\")\n",
     "\n",
     "        self._name = value\n",
     "\n",
-    "# Should give error\n",
-    "p = Person(\"Hej\", 52)\n"
+    "    def say_hi(self) -> None:\n",
+    "        print(f\"Person {self.name} says hi\")\n",
+    "\n",
+    "class Student(Person):\n",
+    "    \"\"\"A Student is a Person that knows a language\"\"\"\n",
+    "    # override __init__()\n",
+    "    def __init__(self, name: str, age: int, language: str) -> None:\n",
+    "        # with super() we look at the parent class and uses their __init__(name, age)\n",
+    "        # delegating to parent\n",
+    "        super().__init__(name, age)\n",
+    "        self.language = language\n",
+    "    \n",
+    "    #TODO: make language into a property\n",
+    "\n",
+    "    # overriding say_hi() method from Person class\n",
+    "    def say_hi(self) -> None:\n",
+    "        print(f\"Student {self.name} speaks {self.language}\")\n",
+    "\n",
+    "\n",
+    "class Viking(Person):\n",
+    "    \"\"\"A Viking is a Person that has an OldCoinsStash\"\"\"\n",
+    "    def __init__(self, name: str, age: int) -> None:\n",
+    "        super().__init__(name, age)  # Override __init__ from parent class\n",
+    "        # composition - has a OldCoinsStash\n",
+    "        self.stash = OldCoinsStash(self.name)\n",
+    "    \n",
+    "student2 = Student(\"Urban Lindström\", 45, \"Java\")\n",
+    "person2 = Person(\"Bodil\", 26)\n",
+    "viking2 = Viking(\"Ivar\", 23)\n",
+    "\n",
+    "print(viking2.stash)\n",
+    "print(viking2.stash.check_balance())\n",
+    "\n",
+    "print(\"-\"*50)\n",
+    "for person in (student2, person2, viking2):\n",
+    "    person.say_hi()\n",
+    "    # note Viking has no say_hi() defined in the class so Python looks up the inheritance chain and finds it in Person class"
    ]
   }
  ],
