Functions for area omkrets

--- a/Labb-3/Functions-for-a-o.ipynb
+++ b/Labb-3/Functions-for-a-o.ipynb
@@ -68,6 +68,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Area of square = (side)2 ,                    \n",
+    "Perimeter of square = 4*side\n",
+    "Are of Right Triangle = ½ * base * height,                \n",
+    "Perimeter of Right Triangle = side1 + side2 + side3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
