--- a/Code-Along/L15-Matplotlib.ipynb
+++ b/Code-Along/L15-Matplotlib.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +36,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x291644852b0>]"
+       "[<matplotlib.lines.Line2D at 0x16f91db4550>]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "Text(0, 0.5, 'y')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "        -0.97301068, -0.99952453, -0.98538417, -0.93116473, -0.83907153]))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "Text(0.5, 0.98, 'Trigonometric functions')"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "Text(0.5, 0.98, 'big title')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -281,6 +281,56 @@
     "ax[0].set(title = \"cos(x) & sin(x)\");\n",
     "\n",
     "fig.suptitle(\"big title\", fontsize = 25)  # kör globalt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m fig, ax \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m4\u001b[39m))\n\u001b[0;32m      3\u001b[0m data_normal \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(\u001b[38;5;241m1000\u001b[39m)\n\u001b[0;32m      5\u001b[0m ax[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mhist(data_normal, bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.7\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "fig, ax = plt.subplots(1, 2, figsize=(10, 4))\n",
+    "\n",
+    "data_normal = np.random.randn(1000)\n",
+    "\n",
+    "ax[0].hist(data_normal, bins=20, alpha=0.7)\n",
+    "ax[0].set(title=\"Histogram of normally distributed data\", xlabel=\"x\", ylabel=\"y\")\n",
+    "\n",
+    "\n",
+    "size = 1000 * np.random.randn(100)\n",
+    "\n",
+    "\n",
+    "scatter = ax[1].scatter(\n",
+    "    x=np.random.randn(100),\n",
+    "    y=np.random.randn(100),\n",
+    "    s=size,\n",
+    "    alpha=0.3,\n",
+    "    cmap=\"viridis\",\n",
+    "    c=np.random.randn(100),\n",
+    ")\n",
+    "\n",
+    "ax[1].set(title=\"Bubble chart\", xlabel = \"x\", ylabel = \"y\");\n",
+    "fig.colorbar(scatter)\n",
+    "fig.set_facecolor(\"red\")"
    ]
   }
  ],
