--- a/Code-Along/L18-OOP_dataclass.ipynb
+++ b/Code-Along/L18-OOP_dataclass.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "\n",
     "p1 = Prefix(42)\n",
-    "print(p1)\n",
+    "print(p1) #the __repr__ picks the value whichi will run the getter\n",
     "\n"
    ]
   }
