l17-namespace, property, instantiation, attibute

--- a/Code-Along/L17-OOP-theory.ipynb
+++ b/Code-Along/L17-OOP-theory.ipynb
@@ -144,6 +144,7 @@
     "fruit1 = \"apple\"\n",
     "fruit2 = \"apple\"\n",
     "\n",
+    "## anledningen till == jämför värdet. is jämför referensen. \n",
     "fruit1 == fruit2, fruit1 is fruit2\n",
     "\n"
    ]
@@ -658,6 +659,107 @@
     "square3 = Square(3)\n",
     "square3.side"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, True)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruit1 = \"apple\"\n",
+    "fruit2 = \"apple\"\n",
+    "\n",
+    "fruit1 == fruit2, fruit1 is fruit2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2102691880432, 2102691880432)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# id is same here as the cell above\n",
+    "\n",
+    "id(fruit1), id(fruit2)\n",
+    "\n",
+    "# När man har kortare strängar då pekar dem mot samma ställe i minne, om man har längre strängar kommer de ha längre minnespositoner\n",
+    "# Vad är en kort och lång sträng?\n",
+    "# - Jo det kan bero på olika python versioner.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "question1 = \"En bild säger mer än 1000 ord, en matematisk formel säger mer än 1000 bilder. Hur många ggr fler säger en formel  än ett ord?\"\n",
+    "\n",
+    "question2 = \"En bild säger mer än 1000 ord, en matematisk formel säger mer än 1000 bilder. Hur många ggr fler säger en formel  än ett ord?\"\n",
+    "\n",
+    "\n",
+    "question1 == question2, question1 is question2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2102682362112, 2102712912160)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(question1), id(question2)  # Vad skiljer dessa åt?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
