--- a/Code-Along/L18-OOP_dataclass.ipynb
+++ b/Code-Along/L18-OOP_dataclass.ipynb
@@ -10,6 +10,8 @@
     "- usually used for classes that stores a lot of data\n",
     "- in method heavy classes, dataclass might not help much\n",
     "\n",
+    "- Om man har klasser med många metoder, man har t ex custom init, repr osv. Så kommer inte dataclass hjälpa\n",
+    "\n",
     "\n",
     "gives free:\n",
     "- `__init__()`\n",
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +33,7 @@
       "value must be int or float not property\n",
       "value setter\n",
       "value getter\n",
-      "Prefix(value=42, unit='unit', prefix_symbol=None)\n"
+      "42 unitsunit\n"
      ]
     }
    ],
@@ -41,9 +43,11 @@
     "\n",
     "@dataclass\n",
     "class Prefix:\n",
+    "    # Här titttar dataclasses på fälten här, dessa är fält\n",
     "    # fields will go into the automatically generated __init__(), __repr__()\n",
-    "    # Använder något som heter fields- variable: type annotation\n",
-    "    value: int | float # positional argument\n",
+    "    # fields- variable: type annotation\n",
+    "    value: int | float # positional argument, har man annoterat så är det ett fält och då kommer dataclass \n",
+    "    # se till att generera en dunder init där fältet är med.\n",
     "    unit: str = \"unit\" #keywoard argument\n",
     "    prefix_symbol: str = None\n",
     "\n",
@@ -51,7 +55,29 @@
     "    # note they don't have type annotation so they are not fields\n",
     "    symbols = \"T G M k h d c m µ n p\".split()\n",
     "    names = \"tera giga mega kilo hekto deci centi milli mikro nano piko\".split()\n",
-    "    values = (10**i for i in(12,9,6,3,2,-1,-2,-3,-6,-9,-12))\n",
+    "    values = (10**i for i in(12,9,6,3,2,-1,-2,-3,-6,-9,-12))  #En generator av siffrorna, kan itereras via en for loop\n",
+    "\n",
+    "    # Dictionary comprehension\n",
+    "    prefix_dict = {\n",
+    "        symbol: [value, name]  # I want a symbol, that maps value and name\n",
+    "        for name, symbol, value in zip(names, symbols, values) #Here we do dictionary comprehension\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    # Now we can do konverteringen\n",
+    "    # När vi kör konvert och lägger in t ex kg, då ska den leta fram k från värdet vi skapat sen innan\n",
+    "    # dividerat på 1000. Då får man fram konverteringen. \n",
+    "    def convert(self, symbol: str) -> float | int:\n",
+    "        self.prefix_symbol = symbol\n",
+    "        return self.value/self.prefix_dict[symbol][0]\n",
+    "\n",
+    "\n",
+    "    # Om man inte gett någon enhete så ger den tillbaka värdet enheter. Men om man har någon enhet så kan man ge ett annat värde\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        if self.prefix_symbol: # samma som att skriva is not None:\n",
+    "            return f\"{self.convert(self.prefix_symbol)}{self.prefix_symbol}{self.unit}\"\n",
+    "        return f\"{self.value} units{self.unit}\"\n",
     "\n",
     "    @property\n",
     "    def value(self):\n",
@@ -70,7 +96,7 @@
     "\n",
     "\n",
     "# in the __init__(self, value, unit, ...)\n",
-    "#       self.value = value\n",
+    "#       self.value = value  \n",
     "#       self.unit = unit\n",
     "\n",
     "\n",
@@ -82,7 +108,33 @@
     "\n",
     "p1 = Prefix(42)\n",
     "print(p1) #the __repr__ picks the value whichi will run the getter\n",
+    "# __repr__() uses the fields and not the value class attributes\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value setter\n",
+      "value getter\n",
+      "42 unitsg\n",
+      "value getter\n",
+      "value getter\n",
+      "42000.0mg\n"
+     ]
+    }
+   ],
+   "source": [
+    "p1 = Prefix(42, \"g\")\n",
+    "print(p1) # __str__\n",
+    "p1.convert(\"m\")  # 42/(10^(-3)) = 42*10^3 = 42000\n",
+    "print(p1)"
    ]
   }
  ],
