--- a/Excercise/repetition.ipynb
+++ b/Excercise/repetition.ipynb
@@ -16,6 +16,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 3, 3, 3, 4, 5, 6, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random as rnd\n",
+    "\n",
+    "dicerolls = 10\n",
+    "dice = []\n",
+    "\n",
+    "for i in range(dicerolls):\n",
+    "    dice.append(rnd.randint(1,6))\n",
+    "\n",
+    "dice.sort()\n",
+    "print(dice)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Uppgift 5 (3p)\n",
+    "Skapa en funktion som tar in två punkter i 2D , och som returnerar tillbaka avståndet mellan\n",
+    "dessa. Anropa därefter denna funktion för test\n",
+    "Det finns en textfil som heter testpunkter.txt som ligger i undermappen testpoints och innehåller:\n",
+    "Punkt 1, punkt 2\n",
+    "(1,2), (0,0)\n",
+    "(2,0), (3,5)\n",
+    "(-2,-2), (9,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2795839320.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [51], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    fimport math\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "def take(point1, point2):\n",
+    "    if distance = math.sqrt(point1 * point2):\n",
+    "        return distance\n",
+    "\n",
+    "take(1, 2)\n",
+    "take(2,3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(\"../data.txt\" \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(line, end = \"\")\n",
+    "\n",
+    "with open(\"../data/txt\" \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(line, end = \"\")\n",
+    "\n",
+    "with open(\"..data/data.txt\" \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(lines, end = \"\")\n",
+    "\n",
+    "with open(\"..data/data.txt\", \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(lines, end = \"\")\n",
+    "\n",
+    "with open(\"..data/data.txt\", \"r\") as f_read:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(line, end = \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam Gustafsson 25\n",
+      "Emil Johansson 23\n",
+      "Sven Erik Karlsson 13\n",
+      "Ove Karlsten 41\n",
+      "Emma Boden 32\n",
+      "Ida HÃ¥kansson 23\n",
+      "Ella Ester 41\n",
+      "Hanna Karlsson 23 \n",
+      "Johan Johansson 42\n",
+      "Sven Erik Lundin 39\n",
+      "BjÃ¶rn BjÃ¶rnsson 39\n",
+      "Karl Karlsson 32\n",
+      "Bose Bosseson 32\n",
+      "HÃ¥kan HÃ¥kanson 24\n",
+      "Jonas Jonasson 31\n",
+      "Erik Eriksson 31\n",
+      "Gore Bord 55\n",
+      "Jakob Kallander 65\n",
+      "Fredrika Ulven 10\n",
+      "\n",
+      "Alfabetisk ordning\n",
+      "Adam Gustafsson 25\n",
+      "BjÃ¶rn BjÃ¶rnsson 39\n",
+      "Bose Bosseson 32\n",
+      "Ella Ester 41\n",
+      "Emil Johansson 23\n",
+      "Emma Boden 32\n",
+      "Erik Eriksson 31\n",
+      "Fredrika Ulven 10\n",
+      "Gore Bord 55\n",
+      "Hanna Karlsson 23 \n",
+      "HÃ¥kan HÃ¥kanson 24\n",
+      "Ida HÃ¥kansson 23\n",
+      "Jakob Kallander 65\n",
+      "Johan Johansson 42\n",
+      "Jonas Jonasson 31\n",
+      "Karl Karlsson 32\n",
+      "Ove Karlsten 41\n",
+      "Sven Erik Karlsson 13\n",
+      "Sven Erik Lundin 39\n",
+      "\n",
+      "\n",
+      "Sorterat efter betyg\n",
+      "\n",
+      "\n",
+      "Betyg F\n",
+      "Sven Erik Karlsson 13\n",
+      "Fredrika Ulven 10\n",
+      "\n",
+      "Betyg E\n",
+      "Adam Gustafsson 25\n",
+      "Emil Johansson 23\n",
+      "Ida HÃ¥kansson 23\n",
+      "Hanna Karlsson 23 \n",
+      "HÃ¥kan HÃ¥kanson 24\n",
+      "\n",
+      "Betyg D\n",
+      "Emma Boden 32\n",
+      "Sven Erik Lundin 39\n",
+      "BjÃ¶rn BjÃ¶rnsson 39\n",
+      "Karl Karlsson 32\n",
+      "Bose Bosseson 32\n",
+      "Jonas Jonasson 31\n",
+      "Erik Eriksson 31\n",
+      "\n",
+      "Betyg C\n",
+      "Ove Karlsten 41\n",
+      "Ella Ester 41\n",
+      "Johan Johansson 42\n",
+      "\n",
+      "Betyg B\n",
+      "Gore Bord 55\n",
+      "\n",
+      "Betyg A\n",
+      "Jakob Kallander 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "##--------- How to loop through .txt file\n",
+    "\n",
+    "with open(\"../Data/blalbla.txt\" \"r\") as f-read:\n",
+    "    lines = f-read.readlines()\n",
+    "    print(lines)\n",
+    "\n",
+    "    for line in lines:\n",
+    "        print(line, end = \"\")\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "with open(\"../Data/Provresultat.txt\") as f_read:\n",
+    "    # each line is stored in a list\n",
+    "    # each line is a string and it has \\n in the end\n",
+    "    lines = f_read.readlines()\n",
+    "    #print(lines)\n",
+    "\n",
+    "    # -------------------a)-------------------\n",
+    "    # loops through the lines and prints each line\n",
+    "    for line in lines:\n",
+    "        print(line, end = \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
