--- a/Labb-3/ritaflerafunktioner.ipynb
+++ b/Labb-3/ritaflerafunktioner.ipynb
@@ -41,10 +41,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.13 ('PythonSchool-iXQr8Z-p')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ede0424b5117af074b0a15022a0db7920ce0c06d0370a7c1883de86effeccc15"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
