l15-matplotlib-how-to-add-multiple-functions

--- a/Code-Along/L15-Matplotlib.ipynb
+++ b/Code-Along/L15-Matplotlib.ipynb
@@ -332,6 +332,57 @@
     "fig.colorbar(scatter)\n",
     "fig.set_facecolor(\"red\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Draw multiple functions at the same time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "för att rita flera funktioner i samma figur:\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Sine:\n",
+    "    x: np.array\n",
+    "\n",
+    "    def plot(self, ax):\n",
+    "        ax.plot(np.sin(self.x))\n",
+    "\n",
+    "@dataclass\n",
+    "class Line:\n",
+    "    x: np.array\n",
+    "    slope: int = 1\n",
+    "    intercept: int = 0\n",
+    "\n",
+    "    def plot(self, ax):\n",
+    "        ax.plot(self.slope*self.x + self.intercept)\n",
+    "\n",
+    "ax = plt.axes()\n",
+    "my_sine = Sine(np.linspace(-3,3))\n",
+    "my_line = Line(np.linspace(-3,3))\n",
+    "neg_line = Line(np.linspace(-3,3), slope = -1)\n",
+    "\n",
+    "for func in (my_line, my_sine, neg_line):\n",
+    "    func.plot(ax)\n",
+    "\n",
+    "ax.set(title = \"Drawing many functions in same surface\");"
+   ]
   }
  ],
  "metadata": {
