--- a/Excercise/Testtenta.ipynb
+++ b/Excercise/Testtenta.ipynb
@@ -143,6 +143,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open (\"../Data/bamba.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()\n",
+    "    \n",
+    "weekdays = [\"\",\"mån\", \"tis\", \"ons\", \"tors\", \"fre\"]\n",
+    "both = [weekdays, lines]\n",
+    "\n",
+    "for i in zip(*both):\n",
+    "    print(*i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
